--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+test-directory/
 
 # TypeScript v1 declaration files
 typings/
